--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <p class="text-base leading-relaxed mb-4">
                         Microdosing with MicroDos(2) hadn't been a magic pill. It had been a key, unlocking the potential that was within him all along. It had quieted the noise, allowing him to hear his own instincts, to trust his own talent. He was more than just a better player; he was a more whole person, in control of his mind, his body, and his destiny. The game was his again.
                     </p>
-                    <button class="bg-blue-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition duration-300 self-start">Start your trial today</button>
+                    <a href="https://microdos2.github.io/UPDATE2/#pricing" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition duration-300 self-start text-center">Start your trial today</a>
                 </div>
                <div class="md:col-span-5 p-6 flex items-center justify-center order-1 md:order-2">
                     <img src="image10.png" alt="A confident basketball player holds a basketball and looks forward with a focused expression in an arena." class="rounded-xl shadow-lg w-full h-auto object-cover">
