--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
             font-family: 'Inter', sans-serif;
         }
     </style>
-     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="bg-gray-100 text-gray-800">
 
     <div class="container mx-auto p-4 sm:p-6 lg:p-8">
-        <h1 class="text-3xl md:text-4xl font-bold text-center text-gray-900 mb-8">The Quiet Score</h1>
+        <h1 class="text-3xl md:text-4xl font-bold text-center text-gray-900 mb-2">The Quiet Score</h1>
+        <h2 class="text-2xl md:text-3xl font-bold text-center text-gray-800 mb-8">Jalen's Story</h2>
 
         <!-- Cover -->
         <div class="bg-white shadow-2xl rounded-2xl overflow-hidden mb-8">
             <div class="p-6 flex items-center justify-center">
-                <img src="cover image.png" alt="Cover image for The Quiet Score storyboard" class="rounded-xl shadow-lg max-w-full md:max-w-2xl h-auto object-contain">
+                <img src="https://placehold.co/800x400/cccccc/ffffff?text=Cover+Image" alt="Cover image for The Quiet Score storyboard" class="rounded-xl shadow-lg max-w-full md:max-w-2xl h-auto object-contain">
             </div>
         </div>
 
@@ -31,7 +32,7 @@
         <div class="bg-white shadow-2xl rounded-2xl overflow-hidden mb-8">
             <div class="grid grid-cols-1 md:grid-cols-12">
                 <div class="md:col-span-5 p-6 flex items-center justify-center">
-                    <img src="image1.png" alt="A basketball player sits in a locker room with his head in his hands." class="rounded-xl shadow-lg w-full h-auto object-cover">
+                    <img src="https://placehold.co/600x400/cccccc/ffffff?text=Scene+1" alt="A basketball player sits in a locker room with his head in his hands." class="rounded-xl shadow-lg w-full h-auto object-cover">
                 </div>
                 <div class="md:col-span-7 p-6 md:p-8 flex flex-col justify-center">
                     <h3 class="text-2xl font-bold mb-3 text-gray-800">Scene 1: The Crushing Weight</h3>
@@ -52,14 +53,14 @@
                     </p>
                 </div>
                  <div class="md:col-span-5 p-6 flex items-center justify-center order-1 md:order-2">
-                     <img src="image2.png" alt="A basketball player looks defeated in a locker room." class="rounded-xl shadow-lg w-full h-auto object-cover">
+                     <img src="https://placehold.co/600x400/cccccc/ffffff?text=Scene+2" alt="A basketball player looks defeated in a locker room." class="rounded-xl shadow-lg w-full h-auto object-cover">
                 </div>
             </div>
 
             <!-- Scene 3 -->
             <div class="bg-white shadow-2xl rounded-2xl overflow-hidden grid grid-cols-1 md:grid-cols-12">
                  <div class="md:col-span-5 p-6 flex items-center justify-center">
-                    <img src="image3.png" alt="Two men sitting at a table, one is showing the other something on his phone." class="rounded-xl shadow-lg w-full h-auto object-cover">
+                    <img src="https://placehold.co/600x400/cccccc/ffffff?text=Scene+3" alt="Two men sitting at a table, one is showing the other something on his phone." class="rounded-xl shadow-lg w-full h-auto object-cover">
                 </div>
                 <div class="md:col-span-7 p-6 md:p-8 flex flex-col justify-center">
                     <h3 class="text-2xl font-bold mb-3 text-gray-800">Scene 3: A Friend's Advice</h3>
@@ -78,14 +79,14 @@
                     </p>
                 </div>
                 <div class="md:col-span-5 p-6 flex items-center justify-center order-1 md:order-2">
-                    <img src="image4.png" alt="A man sits at a table in his apartment, looking thoughtfully at a laptop screen." class="rounded-xl shadow-lg w-full h-auto object-cover">
+                    <img src="https://placehold.co/600x400/cccccc/ffffff?text=Scene+4" alt="A man sits at a table in his apartment, looking thoughtfully at a laptop screen." class="rounded-xl shadow-lg w-full h-auto object-cover">
                 </div>
             </div>
 
             <!-- Scene 5 -->
             <div class="bg-white shadow-2xl rounded-2xl overflow-hidden grid grid-cols-1 md:grid-cols-12">
                 <div class="md:col-span-5 p-6 flex items-center justify-center">
-                    <img src="image5.png" alt="A man in his kitchen takes a tablet out of a blister pack, with a box labeled MicroDos(2) on the counter." class="rounded-xl shadow-lg w-full h-auto object-cover">
+                    <img src="https://placehold.co/600x400/cccccc/ffffff?text=Scene+5" alt="A man in his kitchen takes a tablet out of a blister pack, with a box labeled MicroDos(2) on the counter." class="rounded-xl shadow-lg w-full h-auto object-cover">
                 </div>
                 <div class="md:col-span-7 p-6 md:p-8 flex flex-col justify-center">
                     <h3 class="text-2xl font-bold mb-3 text-gray-800">Scene 5: The First Step</h3>
@@ -104,14 +105,14 @@
                     </p>
                 </div>
                 <div class="md:col-span-5 p-6 flex items-center justify-center order-1 md:order-2">
-                    <img src="image6.png" alt="A man stands looking out a large window at a city skyline, looking calm and contemplative." class="rounded-xl shadow-lg w-full h-auto object-cover">
+                    <img src="https://placehold.co/600x400/cccccc/ffffff?text=Scene+6" alt="A man stands looking out a large window at a city skyline, looking calm and contemplative." class="rounded-xl shadow-lg w-full h-auto object-cover">
                 </div>
             </div>
 
             <!-- Scene 7 -->
             <div class="bg-white shadow-2xl rounded-2xl overflow-hidden grid grid-cols-1 md:grid-cols-12">
                 <div class="md:col-span-5 p-6 flex items-center justify-center">
-                    <img src="image7.png" alt="A basketball player dribbles intensely, guarded by an opponent in a bright arena." class="rounded-xl shadow-lg w-full h-auto object-cover">
+                    <img src="https://placehold.co/600x400/cccccc/ffffff?text=Scene+7" alt="A basketball player dribbles intensely, guarded by an opponent in a bright arena." class="rounded-xl shadow-lg w-full h-auto object-cover">
                 </div>
                 <div class="md:col-span-7 p-6 md:p-8 flex flex-col justify-center">
                     <h3 class="text-2xl font-bold mb-3 text-gray-800">Scene 7: A New Routine</h3>
@@ -130,14 +131,14 @@
                     </p>
                 </div>
                 <div class="md:col-span-5 p-6 flex items-center justify-center order-1 md:order-2">
-                    <img src="image8.png" alt="A man meditates on the floor of his sunlit apartment." class="rounded-xl shadow-lg w-full h-auto object-cover">
+                    <img src="https://placehold.co/600x400/cccccc/ffffff?text=Scene+8" alt="A man meditates on the floor of his sunlit apartment." class="rounded-xl shadow-lg w-full h-auto object-cover">
                 </div>
             </div>
 
             <!-- Scene 9 -->
             <div class="bg-white shadow-2xl rounded-2xl overflow-hidden grid grid-cols-1 md:grid-cols-12">
                 <div class="md:col-span-5 p-6 flex items-center justify-center">
-                    <img src="image9.png" alt="A basketball player stands on the court, smiling joyfully while holding a basketball." class="rounded-xl shadow-lg w-full h-auto object-cover">
+                    <img src="https://placehold.co/600x400/cccccc/ffffff?text=Scene+9" alt="A basketball player stands on the court, smiling joyfully while holding a basketball." class="rounded-xl shadow-lg w-full h-auto object-cover">
                 </div>
                 <div class="md:col-span-7 p-6 md:p-8 flex flex-col justify-center">
                     <h3 class="text-2xl font-bold mb-3 text-gray-800">Scene 9: The Joyful Return</h3>
@@ -157,7 +158,7 @@
                     <a href="https://microdos2.github.io/UPDATE2/#pricing" class="bg-blue-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition duration-300 self-start text-center">Start your trial today</a>
                 </div>
                <div class="md:col-span-5 p-6 flex items-center justify-center order-1 md:order-2">
-                    <img src="image10.png" alt="A confident basketball player holds a basketball and looks forward with a focused expression in an arena." class="rounded-xl shadow-lg w-full h-auto object-cover">
+                    <img src="https://placehold.co/600x400/cccccc/ffffff?text=Scene+10" alt="A confident basketball player holds a basketball and looks forward with a focused expression in an arena." class="rounded-xl shadow-lg w-full h-auto object-cover">
                 </div>
             </div>
         </div>
